<resources>
    <string name="app_name">FindGuyByID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ip_address">Ip Address</string>
    <string name="find_by_id">Find By ID</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome,</string>
    <string name="login">Login</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="enter_an_email_address_you_use_to_sign_in_to">Enter an email address you use to sign in to</string>
    <string name="enter_ip">Enter Ip</string>
    <string name="country">Country</string>
    <string name="region">Region:</string>
    <string name="ip_address_hint">Ip Address:</string>
    <string name="country_hint">Country:</string>
    <string name="history">History</string>
    <string name="list_of_your_targets">List of your targets</string>
    <string name="clear">Clear</string>
    <string name="find_guy_by_id">Find Guy by ID</string>
    <string name="hello">Hello</string>
    <string name="sign_out">Sign out</string>
    <string name="want_to_leave">Want to leave ?</string>
    <string name="information">Information</string>
</resources>