<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/leaveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montera_regular"
        android:text="@string/want_to_leave"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/proxima_semi_bold"
        android:text="@string/sign_out"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leaveText" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/montera_regular"
        android:textColor="@color/gray_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ipInput"
        app:layout_constraintEnd_toEndOf="@+id/ipInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ipInput" />

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montera_bold"
        android:text="@string/hello"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/emailText" />

    <EditText
        android:id="@+id/ipInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/costum_input"
        android:fontFamily="@font/montera_regular"
        android:hint="@string/enter_ip"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="36dp"
        android:paddingBottom="17dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/gray_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montera_regular"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/find_guy_by_id"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipInput" />

    <ImageView
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>