<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.Gravity" />
        <variable
            name="item"
            type="com.example.shualeduri.model.IpModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="22dp"
        android:padding="15dp"
        android:background="@drawable/custom_item">

        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:text="@{item.region}"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hintRegion"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:text="@{item.country}"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/ipAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hintCountry"
            app:layout_constraintTop_toBottomOf="@+id/region" />

        <TextView
            android:id="@+id/ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montera_regular"
            android:textColor="@color/white"
            android:text="@{item.ip}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hintIpAddress"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/hintIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montera_bold"
            android:text="@string/ip_address_hint"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/hintCountry"
            app:layout_constraintEnd_toStartOf="@+id/ipAddress"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/hintCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montera_bold"
            android:text="@string/country_hint"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/hintRegion"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintIpAddress" />

        <TextView
            android:id="@+id/hintRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montera_bold"
            android:text="@string/region"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/region"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintCountry" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>